# docs/swagger.yaml
@@ -19,6 +19,39 @@ definitions:
     - image
     - title
     type: object
+  ctype.ImageType:
+    enum:
+    - 1
+    - 2
+    type: integer
+    x-enum-comments:
+      Local: 本地
+      QiNiu: 七牛云
+    x-enum-descriptions:
+    - 本地
+    - 七牛云
+    x-enum-varnames:
+    - Local
+    - QiNiu
+  images_api.ImageResponse:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      path:
+        type: string
+    type: object
+  images_api.ImageUpdateRequest:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    required:
+    - id
+    - name
+    type: object
   models.AdvertModel:
     properties:
       created_at:
@@ -38,6 +71,28 @@ definitions:
       updated_at:
         type: string
     type: object
+  models.BannerModel:
+    properties:
+      created_at:
+        type: string
+      hash:
+        description: 图片Hash值，判断重复图片
+        type: string
+      id:
+        type: integer
+      image_type:
+        allOf:
+        - $ref: '#/definitions/ctype.ImageType'
+        description: 图片类型，本地还是七牛云
+      name:
+        description: 图片名称
+        type: string
+      path:
+        description: 图片路径
+        type: string
+      updated_at:
+        type: string
+    type: object
   models.RemoveResult:
     properties:
       id_list:
@@ -51,6 +106,13 @@ definitions:
         type: integer
       list:
         $ref: '#/definitions/models.AdvertModel'
+    type: object
+  res.ListResponse-models_BannerModel:
+    properties:
+      count:
+        type: integer
+      list:
+        $ref: '#/definitions/models.BannerModel'
     type: object
   res.Response:
     properties:
@@ -167,4 +229,121 @@ paths:
       summary: 广告更新
       tags:
       - 广告管理
+  /api/images:
+    delete:
+      consumes:
+      - application/json
+      description: 根据ID列表删除图片
+      parameters:
+      - description: 图片ID列表
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.RemoveResult'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 删除图片
+      tags:
+      - 图片管理
+    get:
+      consumes:
+      - application/json
+      description: 获取图片列表
+      parameters:
+      - in: query
+        name: key
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: sort
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/res.ListResponse-models_BannerModel'
+              type: object
+      summary: 图片列表
+      tags:
+      - 图片管理
+    post:
+      consumes:
+      - multipart/form-data
+      description: 上传单张或多张图片
+      parameters:
+      - description: 图片文件(支持多张)
+        in: formData
+        name: images
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 上传图片
+      tags:
+      - 图片管理
+    put:
+      consumes:
+      - application/json
+      description: 根据ID修改图片名称
+      parameters:
+      - description: 图片ID和名称
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/images_api.ImageUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 修改图片名称
+      tags:
+      - 图片管理
+  /api/images_names:
+    get:
+      consumes:
+      - application/json
+      description: 图片名称列表
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/images_api.ImageResponse'
+                  type: array
+              type: object
+      summary: 图片名称列表
+      tags:
+      - 图片管理
 swagger: "2.0"
